--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@portabletext/to-html": "^5.0.1",
+    "@sanity/client": "^7.13.2",
+    "@sanity/image-url": "^2.0.2",
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.2",
     "tailwindcss": "^4.1.16"
